fix alignment of react-select

--- a/app/assets/stylesheets/_react-select.scss
+++ b/app/assets/stylesheets/_react-select.scss
@@ -18,7 +18,7 @@
   position: relative;
   min-width: 60px;
   white-space: nowrap;
-  padding: 8px 120px 8px 10px;
+  padding: 8px 120px 8px 0px;
   overflow: hidden;
   box-sizing: border-box;
   cursor: default;
@@ -47,7 +47,7 @@
 
 .Select-placeholder {
   color: #aaaaaa;
-  padding: 8px 52px 8px 10px;
+  padding: 8px 52px 8px 0px;
   position: absolute;
   top: 0;
   left: 0;
@@ -65,7 +65,7 @@
 
 .Select-value {
   color: #aaaaaa;
-  padding: 8px 52px 8px 10px;
+  padding: 8px 52px 8px 0px;
   position: absolute;
   top: 0;
   left: 0;
